@@ -3,6 +3,7 @@ qtscript-opensource-src (5.12.2+dfsg-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Drop asm_no_volatile.diff, included in the new release.
+  * Rebase s390x_jscore.diff.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 26 Mar 2019 22:56:49 +0300
 
